# grammar-solve

./: .env.example  .gitignore  pyproject.toml
grammars/: geoquery.lark  openscad.lark  overnight_blocks.lark  pddl_blocksworld.lark  pddl_depot.lark  pddl_satellite.lark  smcalflow.lark  smcalflow_pruned.lark  smiles.lark  spice.lark  verilog.lark
pddl_domains/blocksworld/: domain.pddl
pddl_domains/depot/: domain.pddl
pddl_domains/satellite/: domain.pddl
scripts/: ablation_add_remove_rule.sh  ablation_add_rule.sh  ablation_baseline.sh  ablation_p20.sh  ablation_remove_rule.sh  ablations_p20.sh  eval.sh  eval_grammar.sh  knn.sh  load_generated_grammars.sh  load_knn_grammars.sh  modify_grammar.sh  pull_results.sh  train.sh  train_classifier.sh  train_grammar.sh
src/: analyze_rag_failures.py  balance_split.py  bootstrap.py  build_failure_set.py  classifier.py  data.py  eval.py  eval_geoquery.py  eval_grammar.py  eval_openscad.py  eval_overnight.py  eval_pddl.py  eval_smiles.py  eval_specialization.py  eval_spice.py  eval_utils.py  eval_verilog.py  generate_cot.py  generate_grammar.py  geo_executor.py  grammar_health.py  grammar_parser.py  grammar_utils.py  icl.py  knn.py  lark_to_gbnf.py  llm_client.py  load_geoquery.py  load_mg_verilog.py  load_openscad.py  load_overnight.py  load_pddl.py  load_smiles.py  load_spice.py  load_verilog_eval.py  model_loading.py  modify_grammar.py  openai_client.py  openrouter.py  overnight_executor.py  (+8 more)
tests/: test_grammar.py  test_grammar_parser.py  test_prune_grammar.py  test_spice_grammar.py  test_verilog_eval_data.py
(+160 files in other folders)
