[project]
name = "grammar-solve"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.46",
    "datasets>=3.0",
    "peft>=0.13",
    "trl>=0.12",
    "accelerate>=1.0",
    "wandb>=0.18",
    "fire>=0.7",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.26",
    "ninja>=1.11",
    "setuptools>=82.0.0",
    "matplotlib>=3.8",
]
