[project]
name = "grammar-solve"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.46",
    "datasets>=3.0",
    "peft>=0.13",
    "trl>=0.12",
    "accelerate>=1.0",
    "wandb>=0.18",
    "fire>=0.7",
    "python-dotenv>=1.0",
    "huggingface-hub>=0.26",
    "ninja>=1.11",
    "setuptools>=82.0.0",
    "matplotlib>=3.8",
    "lark>=1.1",
    "pytest>=8.0",
    "anthropic>=0.42",
    "openai>=1.0",
    "tqdm>=4.66",
    "sentence-transformers>=3.0",
    "scikit-learn>=1.3",
    "tiktoken>=0.12.0",
    "sentencepiece>=0.2.1",
    "rdkit>=2023.9.1",
    "nltk>=3.8",
    "trimesh>=4.11.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
